tests/baselines/reference/tsxSpreadAttributesResolution16.errors.txt
tests/cases/conformance/jsx/file.tsx(11,10): error TS2741: Property 'AnotherProperty1' is missing in type '{ property1: string; property2: number; }' but required in type 'AnotherComponentProps'.


==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    import React = require('react');
    
    interface ComponentProps {
        property1: string;
        property2: number;
    }
    
    export default function Component(props: ComponentProps) {
        return (
            // Error: missing property
            <AnotherComponent {...props} />
             ~~~~~~~~~~~~~~~~
!!! error TS2741: Property 'AnotherProperty1' is missing in type '{ {|property1|0|}: string; {|property2|1|}: number; }' but required in type '{|AnotherComponentProps|2|}'.
!!! related TS2728 tests/cases/conformance/jsx/file.tsx:17:5: 'AnotherProperty1' is declared here.
!!! annotated symbol 0 tests/cases/conformance/jsx/file.tsx:4:5
!!! annotated symbol 1 tests/cases/conformance/jsx/file.tsx:5:5
!!! annotated symbol 2 tests/cases/conformance/jsx/file.tsx:15:11
        );
    }
    
    interface AnotherComponentProps {
        property1: string;
        AnotherProperty1: string;
        property2: boolean;
    }
    
    function AnotherComponent({ property1 }: AnotherComponentProps) {
        return (
            <span>{property1}</span>
        );
    }